[fix] fix contrast

--- a/src/.ignore/scss/bootstrap.custom.scss
+++ b/src/.ignore/scss/bootstrap.custom.scss
@@ -99,10 +99,10 @@ $filters: ("blur", 1px), ("brightness", .2);
     }
 }
 
-.link-twitter { color: #1da1f2 !important; }
-.link-github { color: #333 !important; }
-.link-instagram { color: #c13584 !important; }
-.link-line { color: #06c755 !important; }
+.text-twitter { color: #1da1f2 !important; }
+.text-github { color: #333 !important; }
+.text-instagram { color: #c13584 !important; }
+.text-line { color: #06c755 !important; }
 
 .bg-sidebar { background-color: $blue-300; }
 
